tests/baselines/reference/noMappedGetSet.errors.txt
noMappedGetSet.ts(2,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
noMappedGetSet.ts(2,10): error TS2304: Cannot find name 'K'.
noMappedGetSet.ts(2,15): error TS2304: Cannot find name 'WAT'.


==== noMappedGetSet.ts (3 errors) ====
    type OH_NO = {
        get [K in WAT](): string
            ~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
             ~
!!! error TS2304: Cannot find name 'K'.
                  ~~~
!!! error TS2304: Cannot find name 'WAT'.
    };
    